Corrected some guidelines shell issues and gave modals a distinct layout. Fixed up alignment in the nav. Started in on navigation guidelines. [Amends #4]

--- a/_scss/component/nav.scss
+++ b/_scss/component/nav.scss
@@ -9,6 +9,9 @@
 @import 'base/accessibility';
 @import 'base/breakpoints';
 
+$logo_height-S: 73px;
+$logo_height-L: 78px;
+
 .usajobs-nav {
   background-color: $color-white;
 
@@ -20,6 +23,12 @@
   &__body {
     @include outer-container();
     max-width: $site-max-width;
+
+    a {
+      // Another override of the base styles just to be certain we don't have
+      // underlined links in the nav
+      text-decoration: none;
+    }
   }
 
   &__header {
@@ -45,6 +54,7 @@
     display: block;
     padding: $size-default 0 $size-default $size-default;
     max-width: rem(160px + 30px); // logo width + the left padding
+    line-height: 1;
 
     @include media($ML) {
       padding-left: $size-M;
@@ -99,7 +109,8 @@
 
     a {
       display: block;
-      padding: rem(21px) $size-default $size-M;
+      padding: rem(($logo_height-S - 17px) /2) $size-default;
+      line-height: 1;
       color: $color-base;
     }
 
@@ -124,8 +135,8 @@
 
     a {
       @include media($MLL) {
-        padding-top: rem(24px);
-        padding-bottom: rem(32px);
+        padding-top: rem(($logo_height-L - 17px) /2);
+        padding-bottom: rem(($logo_height-L - 17px) /2);
         font-size: $base-font-size;
       }
     }
@@ -164,12 +175,14 @@
 
   .account-logged_in {
     display: block;
-    margin-right: 1rem;
+    margin-right: $size-S;
+    padding-top: rem(($logo_height-S - 27px) /2);
+    padding-bottom: rem(($logo_height-S - 27px) /2);
 
     @include media($MLL) {
-      padding-top: rem(22px);
-      padding-bottom: rem(34px);
-      padding-right: 3rem;
+      padding-top: rem(($logo_height-L - 27px) /2);
+      padding-bottom: rem(($logo_height-L - 27px) /2);
+      padding-right: $size-M;
       margin-right: 0;
     }
 
@@ -237,7 +250,7 @@
 
       @include media($MLL) {
         font-size: $lead-font-size;
-        padding: rem(21px) $size-default $size-M;
+        padding: rem(($logo_height-L - 20px) /2) $size-default;
       }
     }
   }
@@ -297,6 +310,8 @@ ul.usajobs-nav__secondary-menu {
   }
 
   li {
+    display: inline-block;
+
     @include media($MLL) {
       display: block;
       width: 100%;
